[package]
name = "hacker-news-pull"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hacker-news = "0.1.2"
hacker-news = { path = "../hacker-news" }
rusqlite = "0.25.3"
tokio = { version = "1.10.1", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.14"
